k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: periodic-payment
  labels:
    name: periodic-payment
    environment: production
