k8s/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: periodic-payment
  labels:
    app: payment-service
  annotations:
    description: "Payment Service API"
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: payment-service
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: periodic-payment
  labels:
    app: user-service
  annotations:
    description: "User Service API"
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: user-service
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    protocol: TCP
